<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingHorizontal="5dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnDecreaseAmount"
                android:src="@drawable/decrease_amount_icon"
                android:layout_width="wrap_content"
                android:backgroundTint="#00000000"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtAmount"
                android:text="3"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#F44336"
                android:paddingHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/btnIncreaseAmount"
                android:src="@drawable/increase_amount_icon"
                android:layout_gravity="center"
                android:backgroundTint="#00000000"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nameProductTitle"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/productName"
            android:text="@string/nameProductDefault"
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:textStyle="bold|italic"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/priceTitle"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/productPrice"
            android:text="@string/priceProductList"
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:textStyle="bold|italic"
            android:textSize="15dp"
            android:textColor="#F44336"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/toppingsTitle"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/toppings"
            android:text="@string/toppingItemValueName"
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:textStyle="italic"
            android:textSize="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/noteTitle"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/note"
            android:text="@string/noteProductDefault"
            android:lines="3"
            android:layout_width="match_parent"
            android:textAlignment="textStart"
            android:textSize="12dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/btnDelete"
            android:background="@drawable/baseline_cancel_24"
            android:layout_width="40dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#F44336"
            android:layout_height="40dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>