<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/navbar_bg"
    android:paddingHorizontal="10dp"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/totalFooter"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTotal"
            android:padding="10dp"
            android:textColor="#F44336"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/defaultPriceBill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_margin="15dp"
        android:text="@string/buyFooter"
        android:layout_weight="2"
        android:layout_height="match_parent"/>

</LinearLayout>