<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="3dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".activities.DetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/productImg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/boder_item_cart"
                    android:scaleType="fitXY"
                    android:src="@drawable/img" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/nameProductDefault"
                        android:textColor="#B00000"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/productPrice"
                            android:layout_width="150dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="10dp"
                            android:textColor="#111"
                            android:text="@string/priceProductList"
                            android:textSize="25dp"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_height="match_parent">
                            <ImageButton
                                android:id="@+id/minusProduct"
                                android:layout_width="20dp"
                                android:layout_height="25dp"
                                android:backgroundTint="#FF4F4F"
                                android:background="@drawable/mid"
                                />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/productAmount"
                            android:layout_width="27dp"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#111"
                            android:text="@string/countCustomProduct"
                            android:textSize="24dp" />
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <ImageButton
                                android:id="@+id/addProduct"
                                android:layout_width="20dp"
                                android:layout_height="25dp"
                                android:backgroundTint="#FF4F4F"
                                android:background="@drawable/add"

                                />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/productDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descriptionProduct" />

            <TextView
                android:id="@+id/Topping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="#FF4F4F"
                android:text="@string/toppingTitleName"
                android:textSize="16dp"
                android:textStyle="italic|bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toppingList"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quayLai"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:backgroundTint="#CF0000"
                    android:text="@string/backBefore" />


                <Button
                    android:id="@+id/Capnhat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:backgroundTint="#FFC327"
                    android:text="@string/updateProduct" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>