<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailActivity">

    <vn.edu.tdc.xifood.views.CancelHeader
        android:id="@+id/cancelHeader"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/infomationProduct"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <!--            product's info-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_header_bg"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/productImg"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:minHeight="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_pic" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tên sản phẩm"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 VND"
                        android:textColor="#F44336"
                        android:textSize="15dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/productDes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionProduct"
                        android:textColor="@color/black"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/black"
                    android:paddingHorizontal="20dp"
                    android:text="CHỌN SỐ LƯỢNG ĐẶT MUA"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:entries="@array/amount"
                    android:theme="@style/mySpinnerItemStyle" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:paddingHorizontal="20dp"
                android:text="@string/toppingTitle"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toppingList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cancel_header_bg"
                android:paddingHorizontal="10dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:paddingHorizontal="20dp"
                android:text="ĐÁNH GIÁ VỀ SẢN PHẨM"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cancel_header_bg"
                android:paddingHorizontal="10dp"
                android:paddingBottom="20dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:backgroundTint="@color/black"
            android:text="@string/addToCart" />

        <Button
            android:id="@+id/buyNow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:backgroundTint="@color/black"
            android:text="@string/buyNow" />

    </LinearLayout>
</LinearLayout>